--- a/Content/Site.css
+++ b/Content/Site.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-image: url('../Images/bgImage_Header.jpg');
     background-color: #fff;
     color: #333;
     font-size: .85em;
@@ -97,30 +98,34 @@ h5, h6 {
 }
 
 #body {
+    background-image: url('../Images/bgImage1.jpg');
     background-color: #efeeef;
     clear: both;
-    padding-bottom: 35px;
+    padding-bottom: 20px;
+    border-top: 1px solid #e2a3a3;
 }
 
     .main-content {
-        background: url("../Images/accent.png") no-repeat;
-        padding-left: 10px;
-        padding-top: 30px;
+        /*background: url("../Images/accent.png") no-repeat;*/
+        padding-left: 12px;
+        padding-top: 18px;
     }
 
     .featured + .main-content {
-        background: url("../Images/heroAccent2.png") no-repeat;
+        /*background: url("../Images/heroAccent2.png") no-repeat;*/
     }
 
 header .content-wrapper {
-    padding-top: 20px; 
+    padding-top: 15px; 
 }
-    
+
 footer {
     clear: both;
+    background-image: url('../Images/bgImage_Foot.jpg');
     background-color: #e2e2e2;
     font-size: .8em;
-    height: 100px;
+    height: 105px;
+    border-top: 1px solid #e2a3a3;
 }
 
 
@@ -149,7 +154,7 @@ footer {
     margin: 0 0 10px;
     text-align: right;
 }
-
+/*
     #login a {
         background-color: #d3dce0;
         margin-left: 10px;
@@ -157,7 +162,7 @@ footer {
         padding: 2px 3px;
         text-decoration: none;
     }
-
+*/
     #login a.username {
         background: none;
         margin-left: 0px;
@@ -172,6 +177,28 @@ footer {
         display: inline;
         list-style: none;
     }
+/* Language Buttons */
+#login a {
+	display: inline-block;
+	padding: 4px 8px 5px 8px;
+	color: #e2a3a3;
+	border: 1px solid #e2a3a3;
+	text-decoration: none;
+	font-size: 12px;
+	background-color: rgba(255,255,255, 0);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-transition: background-color 300ms ease;
+	-moz-transition: background-color 300ms ease;
+	transition: background-color 300ms ease;
+	cursor: pointer;
+}
+#login a:hover {
+	color: #c20c0c;
+    border-color: #c20c0c;
+	background-color: rgba(243,218,218, 0.4);
+}
 
 
 /* menu
@@ -192,12 +219,12 @@ ul#menu {
 
         ul#menu li a {
             background: none;
-            color: #999;
+            color: #e2a3a3 /*#999*/;
             text-decoration: none;
         }
 
         ul#menu li a:hover {
-            color: #333;
+            color: #c20c0c /*#333*/;
             text-decoration: none;
         }
 
@@ -217,7 +244,7 @@ ul#menu {
         background-image: -webkit-linear-gradient(left, #b50b0b 0%, #a4d4e6 100%);
         background-image: linear-gradient(left, #b50b0b 0%, #a4d4e6 100%);   */
         color: #3e5667; 
-        padding: 20px 40px 30px 40px;
+        padding: 20px 20px 10px 20px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
@@ -256,7 +283,7 @@ ol.round {
 }
 
     ol.round li {
-        margin: 25px 0;
+        margin: 20px 0;
         padding-left: 45px;
     }
 
@@ -406,7 +433,7 @@ fieldset {
         font-size: 1.2em;
         margin: 5px 0 6px 0;
         padding: 5px;
-        width: 300px;
+        width: 87px;
     }
 
     textarea {
@@ -442,7 +469,8 @@ fieldset {
         font-size: 1em;
         padding: 4px;
         margin-right: 4px;
-    }
+    height: 24px;
+}
 
 /* info and errors */
 .message-info {
@@ -554,12 +582,59 @@ th {
 td {
     padding: 0.25em 2em 0.25em 0em;
     border: 0 none;
+    /*vertical-align: top;*/
 }
 
 tr.pager td {
     padding: 0 0.25em 0 0;
 }
 
+/* Added 16FEB21 */
+a.imgLink:hover{
+    /*pointer-events: none;*/
+    background-color: #f0f0f0;
+}
+
+a img.thumbnail {
+    border: 1px solid #C0C0C0;
+    padding: 3px;
+}
+
+a img:hover {
+    box-shadow: 4px 3px 8px #8B0000;
+}
+
+table.menuTable{
+    width: 98%;
+}
+th.menuHead{
+    text-align:center;
+}
+td.colPhoto{
+    width: 5%;
+}
+td.colVideo{
+    width: 1%;
+}
+td.colNumber{
+    width: 5%;
+    text-align: left;
+}
+td.colName{
+    width: 20%;
+    text-align: left;
+}
+td.colPrice{
+    text-align: right;
+}
+#photoShow{
+    border: 1px, solid, #e2a3a3;
+    float: left;
+}
+table.menuSets{
+    width: 98%;
+    text-align: center;
+}
 
 /********************
 *   Mobile Styles   *
@@ -597,7 +672,7 @@ tr.pager td {
             margin: 0;
             padding: 0;
         }
-
+/*
         #login a {
             background: none;
             color: #999;
@@ -609,7 +684,7 @@ tr.pager td {
         #login a:hover {
             color: #333;
         }
-
+*/
     /* menu */
     nav {
         margin-bottom: 5px;
